# mcpcodex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/common/: ollama_client.py
src/mcp_agent/: agent.py
src/mcp_client/: client.py
src/mcp_server/: server.py
src/mcp_tool/: tool.py
